[package]
name = "testpkg"
version = "0.1.0"
authors = ["Oliver Evans <oliverevans96@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "testpkg"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.25.0"
rand = "0.9.2"
rand_chacha = "0.9.0"
rayon = "1.11.0"
